# SDL3_CUDA

./: .gitignore  CMakeLists.txt  README.md
include/: SDL_Exception.hpp  kernel.cuh
src/: kernel.cu  main.cpp
